1.1.0

General:
- Added support for Mod Crates (all games can replace base extracted files, supported games have more options and replacement layers)
- Added API links where available
- Merged ROM checking into one option to prevent confusion
- Added drag & drop support (ROMs and folders)

New games supported:
- Rayman 3: Hoodlum Havoc
- Crash Team Racing

Crash Twinsanity:
- Randomize Character Parameters: Now also randomizes spawn health (masks).
- Randomize Level Music: Attempted to fix music tracks repeating.

1.0.1

General:
- Changed Unknown ROM message to specify ROM type

Crash Twinsanity:
- Fixed Ammo Crate not activating from being outlined

Crash Nitro Kart:
- Randomize Drivers: Removed voice clip changes due to them causing crashes on the Gamecube version

1.0.0 - Initial Release.

Games supported:
- Crash Bandicoot
- Crash Bandicoot 2: Cortex Strikes Back
- Crash Bandicoot: Warped
- Crash Nitro Kart
- Crash Twinsanity
- Crash Tag Team Racing
- Crash of the Titans
- Crash Mind Over Mutant

Console ROMs supported:
- PS1
- PS2
- PSP
- XBOX
- GC
- Wii